Arreglada toda la documentacion de la api
