# app/Models/Platform.php
@@ -8,14 +8,14 @@ use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 /**
  * @OA\Schema(
  *     schema="Platform",
- *     required={"id", "name"},
+ *     required={"id", "name", "release_date"},
  *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="name", type="string", example="PlayStation 5"),
- *     @OA\Property(property="description", type="string", example="La PlayStation 5 es una consola de videojuegos de sobremesa desarrollada por Sony Interactive Entertainment. Anunciada en 2019 como la sucesora de la PlayStation 4, se lanzó el 12 de noviembre de 2020 en Australia, Japón, Nueva Zelanda, América del Norte y Corea del Sur, y el 19 de noviembre de 2020 en el resto del mundo."),
+ *     @OA\Property(property="name", type="string", example="PlayStation 5", maxLength=50 ),
+ *     @OA\Property(property="description", type="string", example="La PlayStation 5 es una consola de videojuegos de sobremesa desarrollada por Sony Interactive Entertainment.", maxLength=100 ),
  *     @OA\Property(property="release_date", type="string", format="date", example="2020-11-12"),
- *     @OA\Property(property="price", type="number", format="float", example=499.99),
- *     @OA\Property(property="average_rating", type="number", format="float", example=4.5),
- *     @OA\Property(property="image_url", type="string", example="https://example.com/image.jpg"),
+ *     @OA\Property(property="price", type="int", example=4990),
+ *     @OA\Property(property="average_rating", type="number", format="float" , maximum=9.99, minimum=0 , example=4.50),
+ *     @OA\Property(property="image_url", type="string", example="images/platforms/nintendo.png"),
  *     @OA\Property(property="created_at", type="string", format="date-time"),
  *     @OA\Property(property="updated_at", type="string", format="date-time")
  * )
